--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 变更明细 列表页 JS 脚本
+ * 数据变更 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-26 17:10:25
+ * @since 2021-10-08 16:01:32
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-	<title th:text="${lang.translate('变更明细')}">变更明细</title>
+	<title th:text="${lang.translate('数据变更')}">数据变更</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
@@ -28,6 +28,7 @@
 
     <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
 
+        <input name="id" id="id"  type="hidden"/>
 
          <!--开始：group 循环-->
 
@@ -36,63 +37,36 @@
         <div class="layui-row form-row">
 
              <!--开始：group 循环-->
-            <div class="layui-col-xs12 form-column">
+            <div class="layui-col-xs4 form-column">
 
-                    <div class="layui-form-item" style="display: none">
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('主键')}">主键</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="id" id="id" name="id" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('主键') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
-
-                
                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('业务类型')}">业务类型</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <div id="businessType" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}"></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('业务编号')}">业务编号</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="businessCode" id="businessCode" name="businessCode" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('业务编号') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
+                <!--结束：栏次内字段循环-->
+            </div>
+             <!--开始：group 循环-->
+            <div class="layui-col-xs4 form-column">
 
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('变更号')}">变更号</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="businessCode" id="businessCode" name="businessCode" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('变更号') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
 
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('资产')}">资产</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="assetId" id="assetId" name="assetId" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('资产') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
-
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('变更人')}">变更人</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="changeUserId" id="changeUserId" name="changeUserId" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('变更人') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
-
-                
                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('变更时间')}">变更时间</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input input-type="date" lay-filter="changeTime" id="changeTime" name="changeTime"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('变更时间') }" type="text" class="layui-input"    lay-verify=""   />
+                        <div class="layui-form-label "><div th:text="${lang.translate('变更日期')}">变更日期</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block ">
+                            <input input-type="date" lay-filter="changeDate" id="changeDate" name="changeDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('变更日期') }" type="text" class="layui-input"    lay-verify="|required"   />
                         </div>
                     </div>
 
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('变更内容')}">变更内容</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="content" id="content" name="content" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('变更内容') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
+                <!--结束：栏次内字段循环-->
+            </div>
+             <!--开始：group 循环-->
+            <div class="layui-col-xs4 form-column">
 
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('备注')}">备注</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('备注')}">备注</div></div>
+                        <div class="layui-input-block ">
                             <input lay-filter="notes" id="notes" name="notes" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('备注') }" type="text" class="layui-input"  />
                         </div>
                     </div>
@@ -101,16 +75,63 @@
             </div>
             <!--结束：栏次输入框循环-->
         </div>
+         <!--开始：group 循环-->
+
+        <fieldset class="layui-elem-field layui-field-title form-group-title">
+        <legend>资产列表</legend>
+        </fieldset>
+        <div class="layui-row form-row" style="text-align: center;">
+            <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
+            <iframe js-fn="assetSelectList" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
+            </div>
+        </div>
         <!--结束：group循环-->
+        <fieldset class="layui-elem-field layui-field-title form-group-title">
+            <legend>变更内容</legend>
+        </fieldset>
+
+
+        <!--开始：3栏模式 循环-->
+        <div class="layui-row form-row" >
+            <div class="layui-col-xs4 form-column">
+                <div class="layui-form-item" th:each="item:${attributeData3Column1}">
+                    <div th:replace="business/eam/asset/asset_column :: (${item.attribute.code})"></div>
+                </div>
+            </div>
+            <div class="layui-col-xs4 form-column">
+                <div class="layui-form-item"  th:each="item:${attributeData3Column2}">
+                    <div th:replace="business/eam/asset/asset_column :: (${item.attribute.code})"></div>
+                </div>
+            </div>
+            <div class="layui-col-xs4 form-column">
+                <div class="layui-form-item"  th:each="item:${attributeData3Column3}">
+                    <div th:replace="business/eam/asset/asset_column :: (${item.attribute.code})"></div>
+                </div>
+            </div>
+        </div>
+        <!--开始：单栏模式 循环-->
+        <div class="layui-row form-row" >
+            <div class="layui-col-xs12 form-column">
+                <div class="layui-form-item" th:each="item:${attributeData1Column1}">
+                    <div th:replace="business/eam/asset/asset_column :: (${item.attribute.code})"></div>
+                </div>
+            </div>
+        </div>
+
+
+
+
 
         <div style="height: 8px"></div>
+        <div style="height: 20px"></div>
 
 
     </form>
 
 </div>
 <div class="model-form-footer">
-    <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}"  style="margin-right: 15px" >取消</button>
+    <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}" >取消</button>
+    <button th:if="${perm.checkAnyAuth('eam_asset_data_change:create','eam_asset_data_change:update','eam_asset_data_change:save')}" class="layui-btn" style="margin-right: 15px;display: none;"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
 </div>
 
 <script type="text/javascript" src="/module/global.js" th:src="'/module/global.js?'+${cacheKey}"></script>
@@ -121,9 +142,28 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var SELECT_BUSINESSTYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}]];
-    var VALIDATE_CONFIG={"changeTime":{"date":true,"labelInForm":"变更时间","inputType":"date_input"}};
+    var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
+
+    var VALIDATE_CONFIG={"changeDate":{"date":true,"labelInForm":"变更日期","inputType":"date_input","required":true}};
     var AUTH_PREFIX="eam_asset_data_change";
+
+    // 变更类型
+    var CHANGE_TYPE = [[${changeType}]] ;
+    // 单据ID
+    var BILL_ID = [[${billId}]] ;
+    // 单据类型
+    var BILL_TYPE = [[${billType}]] ;
+    var ASSET_CATEGORY_DATA =  [[${assetCategoryData}]];
+
+
+    var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
+    var SELECT_EQUIPMENTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}]];
+    var SELECT_MAINTENANCESTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}]];
+
+
+
+
+
 
 
 </script>
